# ml

./: .gitignore  BUILD  CMakeLists.txt  README.md  WORKSPACE
build_files/: fmt.BUILD  magic_enum.BUILD  opencv.BUILD
include/: activation.h  ann.h  calc_add.h  coords.h  dna.h  ga.h  organism.h  random.h  render.h
src/: ml.cc
